--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,21 +15,33 @@
     max-width: 700px; // на 30 пікселів за рахкунок падінга
     padding-left: 15px; ///відступи безпики
     padding-right: 15px; ///відступи безпики
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
 
-.header__scanner {
+.hidden {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.scanner__container {
     padding: 10px;
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 50px;
     margin-top: 50px;
-}
-
-.header__result {
     display: flex;
     flex-direction: column;
     gap: 25px;
-    .result__goods, .result__barCode {
+    .result__goods,
+    .result__barCode {
         font-size: 25px;
         font-weight: bold;
         text-align: center;
@@ -41,4 +53,43 @@
         color: red;
         text-align: center;
     }
+}
+
+.setting__container {
+    padding: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 50px;
+    margin-top: 50px;
+
+    .setting__shop,
+    .setting__serverAddress,
+    .setting__authorizationToken {
+        border-radius: 05%;
+        border: 1px solid black;
+        margin-bottom: 10px;
+    }
+
+    .setting__button {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 10px;
+        .setting__resetSettings,
+        .setting__defaultSetting,
+        .setting__save {
+            border: 1px solid black;
+            font-size: 20px;
+            padding: 5px;
+            font-weight: bold;
+            text-align: center;
+        }
+    }
+}
+
+.commandPanel {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 250px;
 }
